--- a/02-basic-datatypes.ipynb
+++ b/02-basic-datatypes.ipynb
@@ -11,81 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interactive Basics, aka \"is it running?\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "42"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "40+2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"world series\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"world\" <> \" \" <> \"series\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Running Scripts from command line:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nil"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# file contents: IO.puts \"Hello world from Elixir\"\n",
-    "# elixir simple.exs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Basic datatypes:"
    ]
   },
@@ -1111,6 +1036,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Lists or Tuples?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Lists are stored as linked lists - each element holds its value and points to the following element until the end of the list is reached.\n",
     "* Accessing the length of a list is a linear operation: we need to traverse the whole list in order to figure out its size.\n",
     "* List concatenation speed also depends on the length of the left-hand list."
@@ -1142,7 +1074,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* When counting the elements in a data structure, Elixir also abides by a simple rule: the function is named __size__ if the operation is in constant time, or __length__ if the operation is linear."
+    "* Tuples are stored contiguously in memory, so getting a tuple size or accessing an element by index is FAST. However, updating or adding elements to tuples is expensive because it requires creating a new tuple in memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{:a, :b, :e, :d}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple = {:a, :b, :c, :d}\n",
+    "put_elem(tuple, 2, :e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* This applies only to the tuple itself, not its contents. \n",
+    "* When you update a tuple, all entries are shared between the old and the new tuple, except for the entry that has been replaced. In other words, __tuples and lists in Elixir are capable of sharing their contents__. This reduces the amount of memory allocation the language needs to perform and is only possible thanks to the immutable semantics of the language.\n",
+    "* Tuples are often used to return extra information from a function. For example, File.read/1 is a function that can be used to read file contents. It returns a tuple:\n",
+    "![tuple-file-read.png](pix/tuple-file-read.png)\n",
+    "* If the path exists, it returns a tuple with the atom :ok as the first element and the file contents as the second. Otherwise, it returns a tuple with :error and the error description."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Most of the time, Elixir will guide you to do the right thing. For example, there is an elem/2 function to access a tuple item but there is no built-in equivalent for lists:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{:ok, \"hello\"}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple = {:ok, \"hello\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"hello\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elem(tuple,1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* When counting the elements in a data structure, Elixir also abides by a simple rule: the function is named __size__ if the operation is in constant time (i.e. the value is pre-calculated) or __length__ if the operation is linear (i.e. calculating the length gets slower as the input grows). As a mnemonic, both “length” and “linear” start with “l”."
    ]
   },
   {
