--- a/05-cond-case-if.ipynb
+++ b/05-cond-case-if.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### case: compares values to patterns until a match is found."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -33,7 +40,6 @@
     }
    ],
    "source": [
-    "# case: compares values to patterns until a match is found.\n",
     "case {1, 2, 3} do\n",
     "  {4, 5, 6} -> \"no matches\"\n",
     "  {1, x, 3} -> \"match and binds x to 2\"\n",
@@ -67,6 +73,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### clauses allow extra conditions to be specified via [guards](https://hexdocs.pm/elixir/guards.html):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -83,11 +96,10 @@
     }
    ],
    "source": [
-    "# clauses allow extra conditions to be specified via guards:\n",
     "case {1,2,3} do\n",
     "  {1,x,3} when x>0 -> \"should match\"\n",
     "  _ -> \"match if guard condition not met\"\n",
-    "  end\n"
+    "  end"
    ]
   },
   {
@@ -151,13 +163,6 @@
     "case :ok do\n",
     "  :error -> \"no match\"\n",
     "  end"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Guard documentation](https://hexdocs.pm/elixir/guards.html)"
    ]
   },
   {
