--- a/08-modules-and-functions.ipynb
+++ b/08-modules-and-functions.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -114,21 +114,12 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mwarning: \u001b[0mredefining module MoreMath (current version defined in memory)\n",
-      "  nofile:1\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        ":ok"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +153,7 @@
     }
    ],
    "source": [
-    "IO.pus MoreMath.do_sum(1,2)"
+    "IO.puts MoreMath.do_sum(1,2)"
    ]
   },
   {
