tweaked markdown in chap01, chap02

--- a/01-introduction.ipynb
+++ b/01-introduction.ipynb
@@ -12,18 +12,22 @@
    "metadata": {},
    "source": [
     "### [Installation](https://elixir-lang.org/install.html)\n",
-    "* Post-installation: what version of Elixir?\n",
+    "\n",
+    "Post-installation: what version of Elixir?\n",
+    "\n",
     "![elixir-v](pix/elixir-v.png)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Interactive Mode:\n",
-    "* When you install Elixir, you will have three new executables: iex, elixir and elixirc. If you compiled Elixir from source or are using a packaged version, you can find these inside the bin directory.\n",
-    "* Start by running iex (or iex.bat if you are on Windows) which stands for Interactive Elixir. In interactive mode, we can type any Elixir expression and get its result.\n",
+    "\n",
+    "When you install Elixir, you will have three new executables: iex, elixir and elixirc. If you compiled Elixir from source or are using a packaged version, you can find these inside the bin directory.\n",
+    "\n",
+    "Start by running iex (or iex.bat if you are on Windows) which stands for Interactive Elixir. In interactive mode, we can type any Elixir expression and get its result.\n",
+    "\n",
     "![intro-to-iex](pix/intro-to-iex.png)"
    ]
   },
@@ -31,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* To exit iex press Ctrl+C twice."
+    "To exit iex press Ctrl+C twice."
    ]
   },
   {
@@ -39,8 +43,10 @@
    "metadata": {},
    "source": [
     "### Running Scripts\n",
-    "* Save the following Elixir code into a file \"simple.exs\".\n",
-    "* Execute it with elixir:\n",
+    "\n",
+    "Save the following Elixir code into a file \"simple.exs\".\n",
+    "\n",
+    "Execute it with elixir:\n",
     "![helloworld](pix/hello-world.png)"
    ]
   },
@@ -49,10 +55,14 @@
    "metadata": {},
    "source": [
     "### Getting Help\n",
-    "* [Elixir on Freenode IRC](irc://irc.freenode.net/elixir-lang)\n",
-    "* [Elixir on Slack](https://elixir-slackin.herokuapp.com/)\n",
-    "* [Elixir Forum](http://elixirforum.com/)\n",
-    "* [Elixir on StackOverflow](https://stackoverflow.com/questions/tagged/elixir)"
+    "\n",
+    "[Elixir on Freenode IRC](irc://irc.freenode.net/elixir-lang)\n",
+    "\n",
+    "[Elixir on Slack](https://elixir-slackin.herokuapp.com/)\n",
+    "\n",
+    "[Elixir Forum](http://elixirforum.com/)\n",
+    "\n",
+    "[Elixir on StackOverflow](https://stackoverflow.com/questions/tagged/elixir)"
    ]
   },
   {
