--- a/02-basic-datatypes.ipynb
+++ b/02-basic-datatypes.ipynb
@@ -239,7 +239,8 @@
    "metadata": {},
    "source": [
     "### Identifying functions\n",
-    "* Functions are identified by their name and arity (the number of arguments ). round/1 identifies the function which is named round and takes 1 argument, whereas round/2 identifies a different (nonexistent) function with the same name but with an arity of 2."
+    "\n",
+    "Functions are identified by their name and arity (the number of arguments ). `round/1` identifies the function which is named round and takes 1 argument, whereas `round/2` identifies a different (nonexistent) function with the same name but with an arity of 2."
    ]
   },
   {
@@ -394,7 +395,8 @@
    "metadata": {},
    "source": [
     "### Atoms\n",
-    "* An atom is a constant whose name is its own value."
+    "\n",
+    "An atom is a constant whose name is its own value."
    ]
   },
   {
@@ -522,7 +524,8 @@
    "metadata": {},
    "source": [
     "### Strings\n",
-    "* Strings are delimited by double quotes, and they are encoded in UTF-8. See the [String module](https://hexdocs.pm/elixir/String.html) for more functions."
+    "\n",
+    "Strings are delimited by double quotes, and they are encoded in UTF-8. See the [String module](https://hexdocs.pm/elixir/String.html) for more functions."
    ]
   },
   {
@@ -699,9 +702,12 @@
    "metadata": {},
    "source": [
     "### Anonymous Functions\n",
-    "* Anonymous functions can be inline & are delimited by \"fn\" & \"end\" keywords.\n",
-    "* Functions are 1st-class citizens in Elixir - they can be passed as args to other functions.\n",
-    "* Note the dot (.) between the variable and the parenthesis - required to invoke an anonymous function."
+    "\n",
+    "Anonymous functions can be inline & are delimited by `fn` & `end` keywords.\n",
+    "\n",
+    "Functions are 1st-class citizens in Elixir - they can be passed as args to other functions.\n",
+    "\n",
+    "Note the dot (.) between the variable and the parenthesis - required to invoke an anonymous function."
    ]
   },
   {
@@ -811,7 +817,8 @@
    "metadata": {},
    "source": [
     "### (Linked) Lists\n",
-    "* Elixir uses square brackets to specify a list of values. Values can be of any type."
+    "\n",
+    "Elixir uses square brackets to specify a list of values. Values can be of any type."
    ]
   },
   {
@@ -898,7 +905,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* List operators never modify the existing list. Concatenating to or removing elements from a list returns a new list. (they are \"immutable\"). One advantage of immutability is that it leads to clearer code. You can freely pass the data around with the guarantee no one will change it - only transform it."
+    "List operators never modify the existing list. Concatenating to or removing elements from a list returns a new list. (they are \"immutable\"). One advantage of immutability is that it leads to clearer code. You can freely pass the data around with the guarantee no one will change it - only transform it."
    ]
   },
   {
@@ -947,7 +954,8 @@
    "metadata": {},
    "source": [
     "### Tuples\n",
-    "* Elixir uses curly brackets to define tuples. Like lists, tuples can hold any value."
+    "\n",
+    "Elixir uses curly brackets to define tuples. Like lists, tuples can hold any value."
    ]
   },
   {
@@ -1043,9 +1051,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Lists are stored as linked lists - each element holds its value and points to the following element until the end of the list is reached.\n",
-    "* Accessing the length of a list is a linear operation: we need to traverse the whole list in order to figure out its size.\n",
-    "* List concatenation speed also depends on the length of the left-hand list."
+    "Lists are stored as linked lists - each element holds its value and points to the following element until the end of the list is reached.\n",
+    "\n",
+    "Accessing the length of a list is a linear operation: we need to traverse the whole list in order to figure out its size.\n",
+    "\n",
+    "List concatenation speed also depends on the length of the left-hand list."
    ]
   },
   {
@@ -1074,7 +1084,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Tuples are stored contiguously in memory, so getting a tuple size or accessing an element by index is FAST. However, updating or adding elements to tuples is expensive because it requires creating a new tuple in memory."
+    "Tuples are stored contiguously in memory, so getting a tuple size or accessing an element by index is FAST. However, updating or adding elements to tuples is expensive because it requires creating a new tuple in memory."
    ]
   },
   {
@@ -1102,18 +1112,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* This applies only to the tuple itself, not its contents. \n",
-    "* When you update a tuple, all entries are shared between the old and the new tuple, except for the entry that has been replaced. In other words, __tuples and lists in Elixir are capable of sharing their contents__. This reduces the amount of memory allocation the language needs to perform and is only possible thanks to the immutable semantics of the language.\n",
-    "* Tuples are often used to return extra information from a function. For example, File.read/1 is a function that can be used to read file contents. It returns a tuple:\n",
+    "This applies only to the tuple itself, not its contents. \n",
+    "\n",
+    "When you update a tuple, all entries are shared between the old and the new tuple, except for the entry that has been replaced. In other words, __tuples and lists in Elixir are capable of sharing their contents__. This reduces the amount of memory allocation the language needs to perform and is only possible thanks to the immutable semantics of the language.\n",
+    "\n",
+    "Tuples are often used to return extra information from a function. For example, `File.read/1` can be used to read file contents. It returns a tuple:\n",
+    "\n",
     "![tuple-file-read.png](pix/tuple-file-read.png)\n",
-    "* If the path exists, it returns a tuple with the atom :ok as the first element and the file contents as the second. Otherwise, it returns a tuple with :error and the error description."
+    "\n",
+    "If the path exists, it returns a tuple with the atom `:ok` as the first element and the file contents as the second. Otherwise, it returns a tuple with `:error` and the error description."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Most of the time, Elixir will guide you to do the right thing. For example, there is an elem/2 function to access a tuple item but there is no built-in equivalent for lists:"
+    "Most of the time, Elixir will guide you to do the right thing. For example, there is an `elem/2` function to access a tuple item but there is no built-in equivalent for lists:"
    ]
   },
   {
@@ -1160,7 +1174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* When counting the elements in a data structure, Elixir also abides by a simple rule: the function is named __size__ if the operation is in constant time (i.e. the value is pre-calculated) or __length__ if the operation is linear (i.e. calculating the length gets slower as the input grows). As a mnemonic, both “length” and “linear” start with “l”."
+    "When counting the elements in a data structure, Elixir also abides by a simple rule: the function is named __size__ if the operation is in constant time (i.e. the value is pre-calculated) or __length__ if the operation is linear (i.e. calculating the length gets slower as the input grows). As a mnemonic, both “length” and “linear” start with “l”."
    ]
   },
   {
