tweaked markdown for chap03, chap04

--- a/03-basic-operators.ipynb
+++ b/03-basic-operators.ipynb
@@ -5,8 +5,10 @@
    "metadata": {},
    "source": [
     "# Elixir: Basic Operators\n",
-    "* Elixir provides +, -, *, / as arithmetic operators, plus the functions div/2 and rem/2 for integer division and remainder.\n",
-    "* Elixir also provides ++ and -- to manipulate lists:"
+    "\n",
+    "Elixir provides +, -, *, / as arithmetic operators, plus the functions `div/2` and `rem/2` for integer division and remainder.\n",
+    "\n",
+    "Elixir also provides `++` and `--` to manipulate lists:"
    ]
   },
   {
@@ -131,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* and & or only evaluate right-side arguments if left-side arguments evaluate to a non-nil result."
+    "`and` & `or` only evaluate right-side arguments if left-side arguments evaluate to a non-nil result."
    ]
   },
   {
@@ -178,9 +180,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Elixir also provides ||, && and ! which accept arguments of any type. For these operators, all values except false and nil will evaluate to true.\n",
-    "* Use and, or and not when you are expecting booleans. If any of the arguments are non-boolean, use &&, || and !.\n",
-    "* Elixir also provides ==, !=, ===, !==, <=, >=, <, and > as comparison operators:"
+    "Elixir provides `||`, `&&` and `!` which accept arguments of any type. For these operators, all values except false and nil will evaluate to true.\n",
+    "\n",
+    "Use `and`, `or` and `not` when you are expecting booleans. If any of the arguments are non-boolean, use `&&`, `||` and `!`.\n",
+    "\n",
+    "Elixir also provides `==`, `!=`, `===`, `!==`, `<=`, `>=`, `<`, and `>` as comparison operators:"
    ]
   },
   {
