--- a/04-pattern-matching.ipynb
+++ b/04-pattern-matching.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Elixir: Pattern Matching\n",
-    "* We have used the = operator a couple times to assign variables. It is actually called the match operator. "
+    "\n",
+    "We have used the `=` operator a couple times to assign variables. It is actually called the `match` operator. "
    ]
   },
   {
@@ -115,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We can match on specific values. Below: the left side will only match the right side when the right side is a tuple that starts with the atom :ok:"
+    "We can match on specific values. Below: the left side will only match the right side when the right side is a tuple that starts with the atom `:ok`:"
    ]
   },
   {
