tweaked markdown in chap05, chap06

--- a/05-cond-case-if.ipynb
+++ b/05-cond-case-if.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### case: compares values to patterns until a match is found."
+    "### case\n",
+    "Case compares values to patterns until a match is found."
    ]
   },
   {
@@ -76,7 +77,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### clauses allow extra conditions to be specified via [guards](https://hexdocs.pm/elixir/guards.html):"
+    "### clauses \n",
+    "\n",
+    "Clauses allow extra conditions to be specified via [guards](https://hexdocs.pm/elixir/guards.html):"
    ]
   },
   {
@@ -240,7 +243,8 @@
    "metadata": {},
    "source": [
     "### cond\n",
-    "* use when you need to find the first condition that returns true. if no clauses return true, CondClauseError is raised."
+    "\n",
+    "Use when you need to find the first condition that returns true. if no clauses return true, `CondClauseError` is raised."
    ]
   },
   {
@@ -321,7 +325,8 @@
    "metadata": {},
    "source": [
     "### if and unless\n",
-    "* best used for checking only one condition."
+    "\n",
+    "Best used for checking only one condition."
    ]
   },
   {
@@ -369,7 +374,8 @@
    "metadata": {},
    "source": [
     "### do/end blocks\n",
-    "* do/end is syntax sugar."
+    "\n",
+    "`do/end` is syntax sugar."
    ]
   },
   {
