--- a/06-binaries-strings-charlists.ipynb
+++ b/06-binaries-strings-charlists.ipynb
@@ -54,7 +54,8 @@
    "metadata": {},
    "source": [
     "### Binaries\n",
-    "* Binaries are byte sequences. They can be organized in any way, even in a sequence that is not a valid string."
+    "\n",
+    "Binaries are byte sequences. They can be organized in any way, even in a sequence that is not a valid string."
    ]
   },
   {
@@ -390,9 +391,12 @@
    "metadata": {},
    "source": [
     "### charlists\n",
-    "* just a list of code points (instead of bytes). they can be created with single-quoted literals.\n",
-    "* compare to a string (a binary), created with double quotes.\n",
-    "* common practice: charlists used within Erlang due to compatibility issues with old libs."
+    "\n",
+    "Just a list of code points (instead of bytes). they can be created with single-quoted literals.\n",
+    "\n",
+    "Compare to a string (a binary), created with double quotes.\n",
+    "\n",
+    "Common practice: charlists used within Erlang due to compatibility issues with old libs."
    ]
   },
   {
